Put validation popovers under modals (fix z-index)

--- a/src/components/ValidationPopover/index.scss
+++ b/src/components/ValidationPopover/index.scss
@@ -1,6 +1,6 @@
 .validation-error-popover.popover {
     display: block;
-
+    z-index: 800;
     border: 0;
     padding: 0;
     color: #fff;
